# final

./: .gitignore  README.md  pyproject.toml
task1/: main.py  step1.py  step2.py  step2_config.py  step3.py  to_csv.py
