[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "ipaddress>=1.0.23",
    "openai>=1.107.0",
    "py7zr>=1.0.0",
    "requests>=2.32.5",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
    "whois>=1.20240129.2",
]

[[index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true
